# Design-Pattern

./: .gitignore  CMakeLists.txt  README.md
creational DP/: abstract_factory.cpp  factory_method.cpp  object_pool.cpp  singleton.cpp
