cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 14)

add_executable(sigleton "creational DP/singleton.cpp")
add_executable(abstract_factory  "creational DP/abstract_factory.cpp")
add_executable(factory_method "creational DP/factory_method.cpp")
add_executable(prototype "creational DP/singleton.cpp")
add_executable(object_pool "creational DP/object_pool.cpp")